--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/web-app-manifest-512x512.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/web-app-manifest-192x192.png">
 <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,16 +13,16 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toko Bunga Terbaik di Bandung Buka 24 jam | Shelby Florist</title>
+    <title>Toko Bunga Terbaik di Bandung Buka 24 jam | Pikar Florist</title>
     <meta
       name="description"
-      content="Shleby Florist - Toko Bunga Terbaik di Bandung. Butuh bunga untuk acara spesialmu? Kami menyediakan berbagai macam bunga segar berkualitas dengan layanan pengiriman gratis dan cepat. "
+      content="Pikar Florist - Toko Bunga Terbaik di Bandung. Butuh bunga untuk acara spesialmu? Kami menyediakan berbagai macam bunga segar berkualitas dengan layanan pengiriman gratis dan cepat. "
     />
     <meta
       name="keyword"
-      content="Shelby Florist, toko bunga Bandung, bunga segar, toko bunga terbaik, florist Bandung, kirim bunga cepat"
+      content="Pikar Florist, toko bunga Bandung, bunga segar, toko bunga terbaik, florist Bandung, kirim bunga cepat"
     />
-    <meta name="author" content="Shelby Florist" />
+    <meta name="author" content="Pikar Florist" />
   </head>
   <body>
     <div id="app"></div>
